# SPO_Lab_1.5

./: .gitignore  CMakeLists.txt  README.md  api.proto  command_api.c  command_api.h  mt.h  ql.lex  ql.y  test.py  util.c  util.h
client/: client.c  cmd_parser.c  cmd_parser.h
cmake/: FindProtobufC.cmake
server/: server.c  storage.c  storage.h
